Agregado metodo para calcular la marca al guardar el evento